--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -116,6 +116,29 @@ header nav ul {
   }
 }
 
+/* --- Skills part --- */
 #skills {
   background: #d0d0d0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.skill-container {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  gap: 2.0rem;
+}
+
+.skill-card {
+  background: #f9f9f9;
+  border-radius: 10px;
+  padding: 1.5rem;
+  width: 300px;
+  box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
