feat: Style career page with flex box

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -142,3 +142,10 @@ header nav ul {
   flex-direction: column;
   align-items: center;
 }
+
+/* --- career part */
+#career {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
