--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -149,3 +149,23 @@ header nav ul {
   flex-direction: column;
   align-items: center;
 }
+
+/* --- project part --- */
+#projects {
+  background-color: #d0d0d0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.project-card {
+  background-color: #f9f9f9;
+  border-radius: 10px;
+  padding: 1.5rem;
+  width: 300px;
+  box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+  
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
