--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -142,6 +142,13 @@ header nav ul {
   align-items: center;
 }
 
+@media (max-width: 1280px) {
+  .skill-card {
+    width: 200px;
+    font-size: small;
+  }
+}
+
 /* --- career part */
 #career {
   display: flex;
