--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -38,7 +38,7 @@ header nav ul {
   display: flex;
   align-items: center;
   gap: 0.5rem;
-  margin-left: 1.0rem;
+  margin-left: 1rem;
   text-decoration: none;
   color: inherit;
 }
@@ -70,7 +70,7 @@ header nav ul {
 .about-left p {
   font-size: 1.1rem;
   line-height: 1.8;
-  color: #444
+  color: #444;
 }
 
 .about-right {
@@ -81,37 +81,37 @@ header nav ul {
 
 @media (width <= 576px) {
   .about-right img {
-  width: 60%;
+    width: 60%;
   }
 }
 
 @media (576px <= width <= 768px) {
   .about-right img {
-  width: 90%;
+    width: 90%;
   }
 }
 
 @media (768px <= width <= 992px) {
   .about-right img {
-  width: 90%;
+    width: 90%;
   }
 }
 
 @media (992px <= width <= 1200px) {
   .about-right img {
-  width: 80%;
+    width: 80%;
   }
 }
 
 @media (1200px <= width <= 1400px) {
   .about-right img {
-  width: 70%;
+    width: 70%;
   }
 }
 
 @media (1400px <= width) {
   .about-right img {
-  width: 60%;
+    width: 60%;
   }
 }
 
@@ -127,7 +127,7 @@ header nav ul {
   display: flex;
   flex-wrap: wrap;
   align-items: center;
-  gap: 2.0rem;
+  gap: 2rem;
 }
 
 .skill-card {
@@ -135,7 +135,7 @@ header nav ul {
   border-radius: 10px;
   padding: 1.5rem;
   width: 300px;
-  box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 
   display: flex;
   flex-direction: column;
@@ -169,8 +169,8 @@ header nav ul {
   border-radius: 10px;
   padding: 1.5rem;
   width: 300px;
-  box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-  
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -194,14 +194,14 @@ form {
   gap: 20px;
 }
 
-.contact-container-bottom { 
+.contact-container-bottom {
   display: flex;
   flex: 1;
   justify-content: center;
   margin-top: 20px;
 }
 
-.contact-container-bottom textarea{
+.contact-container-bottom textarea {
   width: 100%;
   height: 200px;
 }
